added css to homepage and base page

--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -16,35 +16,38 @@
         <a href="{{ url_for('new_story') }}">new story</a> or add to an
         existing one!
     </h2>
-    <h2>Contribute to an Existing Story!</h2>
-    {% if not_contributed_stories %}
-    <ul>
-        {% for story_id, story_creator, story_title in not_contributed_stories %}
-        <li>
-            <a href="{{ url_for('story', story_id=story_id) }}">{{ story_title }}</a>
-            by <b>{{ story_creator|default("Unknown User") }}</b>
-        </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <p>
-        You've contributed to every story!
-    </p>
+    <div style="display: inline-block;">
+        <h2>Contribute to an Existing Story!</h2>
+        {% if not_contributed_stories %}
+        <ul>
+            {% for story_id, story_creator, story_title in not_contributed_stories %}
+            <li>
+                <a href="{{ url_for('story', story_id=story_id) }}">{{ story_title }}</a>
+                by <b>{{ story_creator|default("Unknown User") }}</b>
+            </li>
+            {% endfor %}
+        </ul>
+        {% else %}
+        <p>
+            You've contributed to every story!
+        </p>
+    </div>
     {% endif %}
-
-    <h2>View Stories You've Contributed To</h2>
-    {% if contributed_stories %}
-    <ul>
-        {% for story_id, story_creator, story_title in contributed_stories %}
-        <li>
-            <a href="{{ url_for('story', story_id=story_id) }}">{{ story_title }}</a>
-            by <b>{{ story_creator|default("Unknown User") }}</b>
-        </li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <p>
-        You haven't contributed to any stories yet!
-    </p>
+    <div style = "display: inline-block; margin-left: 100px;">
+        <h2>View Stories You've Contributed To</h2>
+        {% if contributed_stories %}
+        <ul>
+            {% for story_id, story_creator, story_title in contributed_stories %}
+            <li>
+                <a href="{{ url_for('story', story_id=story_id) }}">{{ story_title }}</a>
+                by <b>{{ story_creator|default("Unknown User") }}</b>
+            </li>
+            {% endfor %}
+        </ul>
+        {% else %}
+        <p>
+            You haven't contributed to any stories yet!
+        </p>
+    </div>
     {% endif %}
 {% endblock %}
