--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
             {% block nav %}
                 <!-- Nav -->
                 <p>
-                    <a href="{{ url_for('index') }}">Home</a>
+                    <a style ="border-style: double; color: red; font-size: 16; background-color: yellow" href="{{ url_for('index') }}">Home</a>
                     {% if "username" in session %}
                     <a href="{{ url_for('logout') }}">Logout</a>
                     {% endif %}
