--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -28,5 +28,5 @@
         <input type="submit", name="sub" value="Register">
     </form>
 
-    <p>Already registered? <a href="{{ url_for('login') }}">Log in</a> here.</p>
+    <p>Already registered? <a href="{{ url_for('login') }}" style="color: blueviolet; text-decoration: none;">Log in</a> here.</p>
 {% endblock %}
