--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,5 +21,5 @@
         <input type="submit", name="sub" value="Log In">
     </form>
 
-    <p>New user? <a href="{{ url_for('register') }}">Register</a> here.</p>
+    <p>New user? <a href="{{ url_for('register') }}" style="color: blueviolet; text-decoration: none;">Register</a> here.</p>
 {% endblock %}
