--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,4 +1,10 @@
 <!--
+    Team Go Stop - Angela Zhang and Rayat Roy
+    SoftDev PD1
+    K20 -- CSS Styling
+    2021-11-29
+    time spent: 2 hours
+
     CircleTable -- Christopher Liu, Yusuf Elsharawy, Deven Maheshwari, Naomi Naranjo
     SoftDev
     P00: CircleStories
